# gbasis

./: .buildinfo  .cardboardlint.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEADER  MANIFEST.in  README.html  README.md  README.rst  genindex.html  installation.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  test_compare_overlap.py  test_multioverlap.py  test_n_sparse_builder.py  test_overlap.py  test_overlap_n.py  test_try.py  tox.ini  tutorial.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  question.md
.github/workflows/: build_website.yaml  build_wheels.yml  main.yml  pypi_release.yaml  pytest.yaml
_autosummary/: gbasis.evals.html  gbasis.html  gbasis.integrals.html  modules.html
_sources/: README.md  installation.ipynb  intro.md  markdown-notebooks.ipynb  tutorial.ipynb
_sources/_autosummary/: gbasis.evals.rst  gbasis.integrals.rst  gbasis.rst  modules.rst
_sources/tutorial/: Evaluations_1rdm_properties.ipynb  Evaluations_electron_density.ipynb  JCP_paper.ipynb
docs/: notes.tex
gbasis/: __init__.py  _deriv.py  _diff_operator_int.py  _moment_int.py  _one_elec_int.py  _two_elec_int.py  angular_momentum.py  base.py  base_four_symm.py  base_one.py  base_two_asymm.py  base_two_symm.py  boys.py  cart_gaussian.py  contractions.py  density.py  deriv.py  electron_repulsion.py  electrostatic_potential.py  eval.py  eval_deriv.py  io.py  kinetic_energy.py  lincomb.py  moment.py  moment_int.py  momentum.py  nuclear_electron_attraction.py  one_electron_integral.py  overlap.py  overlap_asymm.py  parsers.py  point_charge.py  screening.py  spherical.py  stress_tensor.py  utils.py  wrapper_iodata.py  wrapper_pyscf.py  wrappers.py
gbasis/autograd/: playground.py
gbasis/evals/: __init__.py  _deriv.py  basis_deriv.py  basis_eval.py  density.py  electrostatic_potential.py  esp.py  eval.py  eval_deriv.py  stress_tensor.py
gbasis/gradient/: __init__.py  ad.py
gbasis/integrals/: __init__.py  _diff_operator_int.py  _moment_int.py  _one_elec_int.py  _schwarz_screening.py  _two_elec_int.py  _two_elec_int_improved.py  angular_momentum.py  boys_functions.py  density.py  electron_repulsion.py  kinetic_energy.py  libcint.py  moment.py  momentum.py  multi_overlap.py  nuclear_electron_attraction.py  overlap.py  overlap_asymm.py  overlap_n.py  point_charge.py
gbasis/test/: test_io.py
notebooks/tutorial/: C2H4_hf_ccpvdz.fchk  C2H4_hf_ccpvtz.fchk  Electron_density_and_gradient.ipynb  Evaluations_1rdm_properties.ipynb  Evaluations_basis_and_potential.ipynb  Evaluations_electron_density.ipynb  JCP_paper.ipynb  Screening_example.ipynb  Tutorial 1 - Basis Sets.ipynb  Tutorial 2 - Evaluations.ipynb  Tutorial 2 - Integrals.ipynb  Tutorial 3 - Integrals.ipynb  Tutorial 3 - Two-Electron Integral Optimizations.ipynb  bse_example.ipynb  data_sto6g.nwchem  gbasis_tutorial_notebook.ipynb  hydrogen_def2-svp.1.gbs  hydrogen_def2-svp.1.nw  water.fchk
notebooks/tutorial/data/: HeH_6-311g.gbs  HeH_6-31g.gbs  HeHp.fchk  c2h4_q0.fchk
tests/: README.md  data_631g.gbs  data_anorcc.gbs  data_anorcc.nwchem  data_ccpvdz.nwchem  data_horton_bec_cart_elec_repulsion.npy  data_horton_bec_cart_kinetic_energy_integral.npy  data_horton_bec_cart_nucattract.npy  data_horton_bec_cart_overlap.npy  data_horton_hhe_cart_density_rand.npy  data_horton_hhe_cart_dm_rand.npy  data_horton_hhe_cart_elec_repulsion.npy  data_horton_hhe_cart_esp.npy  data_horton_hhe_cart_eval.npy  data_horton_hhe_cart_kinetic_energy_integral.npy  data_horton_hhe_cart_nucattract.npy  data_horton_hhe_cart_overlap.npy  data_horton_hhe_sph_density.npy  data_horton_hhe_sph_density_gradient.npy  data_horton_hhe_sph_density_hessian.npy  data_horton_hhe_sph_density_laplacian.npy  data_horton_hhe_sph_density_rand.npy  data_horton_hhe_sph_dm_rand.npy  data_horton_hhe_sph_esp.npy  data_horton_hhe_sph_eval.npy  data_horton_hhe_sph_posdef_kinetic_density.npy  data_rdm_h2o_sto3g.npy  data_rdm_kr_sto6g.npy  data_sto6g.gbs  data_ugbs.nwchem  h2o_hf_ccpv5z_cart.fchk  h2o_hf_ccpv5z_sph.fchk  test_ad.py  test_angular_momentum.py  test_base.py  test_base_four_symm.py  test_base_one.py  test_base_two_asymm.py  test_base_two_symm.py  test_basis_deriv.py  (+44 more)
tools/: __init__.py  auto_intor_modify.py  benchmark_density.py  benchmark_intracule.py  gitversion.py  install_libcint.sh
tools/conda.recipe/: meta.yaml
tutorial/: Evaluations_1rdm_properties.html  Evaluations_basis_and_potential.html  Evaluations_electron_density.html  JCP_paper.html  Tutorial 1 - Basis Sets.html  Tutorial 2 - Integrals.html  Tutorial 3 - Two-Electron Integral Optimizations.html
website/: README.md  _config.yml  _toc.yml  installation.ipynb  intro.md  requirements.txt  tutorial.ipynb
website/_autosummary/: gbasis.rst
website/_build/.doctrees/: environment.pickle  installation.doctree  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
website/_build/.doctrees/_autosummary/: gbasis.doctree  gbasis.evals.doctree  gbasis.integrals.doctree  modules.doctree
website/_build/html/: .buildinfo  genindex.html  installation.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
website/_build/html/_autosummary/: gbasis.evals.html  gbasis.html  gbasis.integrals.html  modules.html
website/_build/html/_sources/: installation.ipynb  markdown-notebooks.ipynb
website/_build/jupyter_execute/: installation.ipynb
